# symmetrical-funicular-rust

./: CLAUDE.md  Cargo.toml
configs/: config.yaml
src/: constants.rs  main.rs
src/bot/: config.rs  error.rs  mod.rs  stats.rs
src/config/: app.rs  arbitrage.rs  balance.rs  duration.rs  error.rs  exchange.rs  execution.rs  mod.rs  notification.rs  orderbook.rs  risk.rs  storage.rs  tests.rs
src/domain/: fees.rs  mod.rs  opportunity.rs  order.rs  orderbook.rs
src/exchanges/: manager.rs  mod.rs  utils.rs
src/exchanges/poloniex/: client.rs  exchange.rs  mod.rs  websocket.rs
src/notification/: mod.rs  notifier.rs  telegram.rs  tests.rs
src/storage/: mod.rs  sqlite.rs
