[package]
name = "symmetrical-funicular-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rust_decimal = { version = "1.36", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
urlencoding = "2.1"
hex = "0.4"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
log = "0.4.29"

[dev-dependencies]
tempfile = "3.20"
